package board;

/**
 * NEW - новый
 * ANALYSIS - анализ
 * WORK - в работе
 * COMPLETE - завершено
 */
public enum Status {
    NEW,
    ANALYSIS,
    WORK,
    COMPLETE
}
