package board;

/**
 * BUG - дефект
 * FEATURE - новая функциональность
 * IMPROVEMENT - улучшение существующего кода
 */
public enum TaskType {
    BUG,
    FEATURE,
    IMPROVEMENT
}
